# bioc-intelligence

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  bioc-intelligence-spec.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml  enrich.yml  frontend-ci.yml
docs/: frontend-spec.md
frontend/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/data/: manifest.json  mart_grant_attribution.parquet  mart_package_directory.parquet  mart_package_impact.parquet  mart_release_growth.parquet  mart_work.parquet
frontend/scripts/: sync-marts.sh
frontend/src/: App.tsx  index.css
frontend/src/components/: InfoDot.tsx  StatCard.tsx  VegaChart.tsx  charts.ts  ui.tsx
frontend/src/db/: duckdb.ts  useQuery.ts
frontend/src/lib/: csv.ts  format.ts
frontend/src/pages/: BiocViews.tsx  ByTheNumbers.tsx  Explorer.tsx  Grants.tsx  Growth.tsx  ImpactLeaderboard.tsx
src/biocintel/: __init__.py  cli.py  config.py  db.py  dcf.py  http.py  lake.py  schema.sql
src/biocintel/pipeline/: __init__.py  build_marts.py  enrich_from_lake.py  extract_citation_files.py  extract_downloads.py  extract_packages.py  judge_mentions.py  link_works.py  mine_mentions.py
tests/: test_citation_parse.py  test_dcf.py  test_downloads_parse.py  test_enrich_steps.py  test_link_works.py  test_marts.py  test_mentions.py
