[project]
name = "biocintel"
version = "0.1.0"
description = "Bioconductor Intelligence Platform — research-intelligence & impact analytics for the Bioconductor ecosystem"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sean Davis", email = "seandavi@gmail.com" }]
dependencies = [
    "duckdb>=1.1",
    "httpx>=0.27",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
# Phase-2 enrichment reads the shared lake via its own read client (cdsci-lake).
# It lives as a local sibling, not on PyPI; wire it when Phase 2 starts, e.g.:
#   uv pip install -e ../cdsci-lake
# (or add a [tool.uv.sources] path entry). Kept out of declared deps so Phase-1
# installs don't depend on lake availability.

[project.scripts]
biocintel = "biocintel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/biocintel"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
